# syncreadings

./: .gitignore  DEVELOP.md  LICENSE  Makefile  README.md  gensets.py  pyproject.toml  syncreadings.py  syncreadings.spec
dat/: generate_csv.py  generate_csv_with_ms.py
doc/: 01_overview.rst  02_sync_analysis.rst  03_user_instructions.rst  04_syncreadings.rst  05_setsManagement.rst  06_mydialogs.rst  10_time_entries.rst  97_using_ttk_themes.md  98_notes_on_extending_methods.md  99_notes_on_custom_events.md  99_notes_on_custome_events.md  Makefile  conf.py  index.rst
lib/: buttonFrame.py  buttonGenerator.py  entryDatetime.py  entryGenerator.py  entryTimedelta.py  entryTimescale.py  entryWithModel.py  my_dialogs.py  setsManagement.py
lib/html/: help.html
lib/test/: test_read.py
